# Life-Universalis

./: .gitignore  README.md
Game/: BuildingComponent.cpp  BuildingManagerEntity.cpp  BuildingTestComponent.cpp  BuildingTestComponent.h  DayTimeEntity.cpp  HumanAIComponent.h  HumanManagerEntity.cpp  HumanManagerEntity.h  MotionComponent.h  Workplace.h  main.cpp
Game/Game/: BuildingComponent.cpp  BuildingComponent.h  BuildingManagerEntity.cpp  BuildingManagerEntity.h  BuildingTestComponent.h  DayTimeEntity.cpp  DayTimeEntity.h  EnvironmentEntitiesNames.h  GoToHumanTask.cpp  GoToHumanTask.h  HumanAIComponent.cpp  HumanAIComponent.h  HumanAIMasterComponent.cpp  HumanAIMasterComponent.h  HumanAINeedComponent.cpp  HumanAINeedComponent.h  HumanAIRestNeedComponent.cpp  HumanAIRestNeedComponent.h  HumanAISeekJobComponent.cpp  HumanAISeekJobComponent.h  HumanAITestNeedComponent.cpp  HumanAITestNeedComponent.h  HumanAIWorkNeedComponent.cpp  HumanAIWorkNeedComponent.h  HumanComponent.cpp  HumanComponent.h  HumanComponentNames.h  HumanIncludes.h  HumanInteraction.cpp  HumanInteraction.h  HumanInteractionControllerComponent.cpp  HumanInteractionControllerComponent.h  HumanManagerEntity.cpp  HumanManagerEntity.h  HumanTask.cpp  HumanTask.h  HumanTaskObserver.h  HumanTaskQueueComponent.cpp  HumanTaskQueueComponent.h  HumanWorkInteraction.cpp  (+30 more)
Game/Game.xcodeproj/: project.pbxproj
GameEngine/: GameEngine.cpp  GameEngine.h  GameEnvironment.h  GameEnvironmentEntity.h  Kernel.cpp  Kernel.h  LifeUniversalis.h  Timer.h  Transform.h
GameEngine/GameEngine.xcodeproj/: project.pbxproj
LifeUniversalis.xcworkspace/: contents.xcworkspacedata
LifeUniversalisProject/: CMakeLists.txt  LifeUniversalis.sln
LifeUniversalisProject/LifeUniversalis/: BuildingComponent.cpp  BuildingComponent.h  BuildingManagerEntity.cpp  BuildingManagerEntity.h  BuildingTestComponent.cpp  BuildingTestComponent.h  CMakeLists.txt  DayTimeEntity.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameObjectComponent.cpp  GameObjectComponent.h  GlobalHeaders.h  Human.cpp  Human.h  HumanAIComponent.cpp  HumanAIComponent.h  HumanAISeekJobComponent.cpp  HumanAISeekJobComponent.h  HumanComponent.cpp  HumanComponent.h  HumanManagerEntity.cpp  HumanParametersComponent.cpp  HumanParametersComponent.h  Kernel.cpp  Kernel.h  LifeUniversalis.h  LifeUniversalis.vcxproj  LifeUniversalis.vcxproj.filters  LifeUniversalisSystem.h  MotionComponent.cpp  MotionComponent.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Timer.h  Updateable.h  (+2 more)
LifeUniversalisProject/LifeUniversalisTest/: CMakeLists.txt  GameObjectComponentMock.h  GameObjectUnitTest.cpp  HumanParametersComponentUnitTest.cpp  HumanUnitTest.cpp  LifeUniversalisTest.vcxproj  LifeUniversalisTest.vcxproj.filters  TransformUnitTest.cpp  main.cpp
UnitTests/: GameObjectComponentMock.h  GameObjectUnitTest.cpp  HumanParametersComponentUnitTest.cpp  TestGameEngine.cpp  TestGameEngine.h  main.cpp
gtest/: readme.txt
gtest/lib/: gtest.lib  (+1 more)
(+47 files in other folders)
